--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <script src="packages/browser/dart.js"></script>
   </head>
   <body>
-    <hello-app></hello-app>
+    <my-app></my-app>
   </body>
 </html>
 
